--- a/countries/build.gradle
+++ b/countries/build.gradle
@@ -63,6 +63,7 @@ android {
 }
 
 dependencies {
+    compile 'com.airg.android:device:0+@aar'
     compile "com.android.support:support-annotations:$SUPPORT_LIB_VERSION"
     compile "com.android.support:support-v4:$SUPPORT_LIB_VERSION"
 
