--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ android:
     - sys-img-armeabi-v7a-android-19
 
 before_install:
-  - echo no | android create avd --force -n logger -t android-19 --abi default/armeabi-v7a
-  - emulator -avd logger -no-skin -no-audio -no-window &
+  - echo no | android create avd --force -n testmule -t android-19 --abi default/armeabi-v7a
+  - emulator -avd testmule -no-skin -no-audio -no-window &
 
 before_script:
   - echo "Waiting for emulator"
